# pystack

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  compose.yaml  skills-lock.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  pyrightconfig.json
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260615_0001_create_tasks.py
backend/src/pystack_api/: __init__.py  main.py  schemas.py
backend/src/pystack_api/api/: auth.py  dependencies.py  request_context.py  router.py
backend/src/pystack_api/api/routes/: health.py  tasks.py
backend/src/pystack_api/commands/: __init__.py  export_openapi.py  seed.py
backend/src/pystack_api/core/: config.py  event_log.py
backend/src/pystack_api/db/: connection.py  session.py
backend/src/pystack_api/models/: __init__.py  task.py
backend/src/pystack_api/queries/: __init__.py  tasks.py
backend/src/pystack_api/schemas/: task.py
backend/src/pystack_api/services/: assistant.py  tasks.py
backend/tests/: conftest.py  test_health.py
backend/tests/auth/: test_clerk_auth.py  test_clerk_auth_stubbed.py
backend/tests/integration/: conftest.py  test_assistant.py  test_health.py  test_queries.py  test_tasks.py
backend/tests/unit/: test_assistant_api_logging.py  test_placeholder.py  test_request_context.py
db/: init-databases.sql  schema.sql
db/migrations/: 20260615000100_create_tasks.sql  20260617120000_add_user_id_to_tasks.sql  20260618162000_enforce_task_positions.sql  20260620170000_create_migration_smoke_tests.sql  20260620181500_drop_migration_smoke_tests.sql
docs/: claude-on-web.md  deploying.md  environment-variables.md
frontend/: .prettierignore  eslint.config.mjs  index.html  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: board.spec.ts  global-setup.ts
frontend/src/: App.tsx  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  BoundaryErrorTest.tsx  SentryTest.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: config.ts
frontend/src/auth/: ClerkWithRouter.tsx
frontend/src/features/assistant/: AssistantPane.tsx  assistantAdapter.ts
frontend/src/features/board/: Board.test.tsx  Board.tsx
infra/: render.yaml
scripts/: dev_pretty_logs.py  doctor.py  render_database_url.py  render_infra.py  web-ensure-node.sh  web-session-start.sh  web-setup.sh
