[project]
name = "pystack-api"
version = "0.1.0"
description = "FastAPI backend for the Pystack board"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openrouter]>=2.0.0",
    "pydantic-settings>=2.14.2",
    "sentry-sdk[fastapi]>=2.63.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pystack_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# "S" enables flake8-bandit security lints alongside the style/bugbear rules.
# "ANN" keeps Python function signatures typed, and "PGH003" keeps type ignores
# narrow enough to audit.
select = ["E", "F", "I", "UP", "B", "SIM", "S", "ANN", "PGH003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_decorated = true
disallow_any_unimported = true
enable_error_code = ["ignore-without-code"]
plugins = ["pydantic.mypy"]
